styles/style.css
/* ... */
.rainbow-image {
    z-index: 3;
    animation: 2.5s pulse infinite;
    animation-timing-function: ease-in-out;
    border-radius: 100%;
    box-shadow: 0px 0px 5px 5px rgba(255, 233, 163, 0.5),
                0px 0px 5px 5px rgba(255, 233, 163, 0.5) inset;
}

.rainbow-title {
    color: rgba(0, 0, 0, 0.55);
    background: #d4af37;
    text-shadow: -1px -1px rgba(0, 0, 0, 0.35);
    font-style: italic;
    animation: move 60s linear infinite;

    box-shadow: -2px -3px 2px 2px rgba(0, 0, 0, 0.5) inset,
                2px 3px 2px 2px rgba(255, 255, 255, 0.8) inset,
                3px 3px 2px 1px rgba(0, 0, 0, 0.6);
}

.block-gold {
    background-image: linear-gradient(90deg, #d4af37, #aa8714);
    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
                6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
}

.block-pink {
    background-image: linear-gradient(90deg, pink, rgb(255, 132, 153));
}

.block-seagreen {
    background-image: linear-gradient(90deg, seagreen, rgb(23, 103, 57));
}

.block-dark {
    background-image: linear-gradient(90deg, rgb(75, 75, 75), rgb(49, 49, 49));
}

.block-red {
    background-image: linear-gradient(90deg, rgb(210, 67, 67), rgb(183, 56, 56));
}

.block-bone {
    background-image: linear-gradient(90deg, rgb(242, 237, 223), rgb(218, 211, 190));
}

.block-purple {
    background-image: linear-gradient(90deg, rgb(121, 121, 162), rgb(79, 79, 135));
}

.label-pink {
    background-color: pink;
    color: rgb(255, 255, 255);
    text-shadow: 0px 2px 1px black;
}

.label-seagreen {
    background-color: seagreen;
}

.label-dark {
    background-color: rgb(75, 75, 75);
}

.label-red {
    background-color: rgb(210, 67, 67);
}

.label-bone {
    background-color: rgb(242, 237, 223);
    color:rgb(75, 75, 75);
    text-shadow: 0px 2px 1px white;
}

.label-purple {
    background-color: rgb(121, 121, 162);
}

.inset-pink {
    background-color: rgb(184, 113, 125) !important;
    color: rgb(242, 237, 223) !important;
    text-shadow: 0px 2px 1px white !important;
}

.inset-seagreen {
    background-color: rgb(32, 85, 55) !important;
}

.inset-dark {
    background-color: rgb(48, 48, 48) !important;
}

.inset-red {
    background-color: rgb(135, 45, 45) !important;
}

.inset-bone {
    background-color: rgb(190, 184, 171) !important;
    color: rgb(75, 75, 75) !important;
    text-shadow: 0px 2px 1px white !important;
}

.inset-purple {
    background-color: rgb(94, 94, 120) !important;
}

@keyframes move {
    to {
        background-position: 215px;
    }
}

@keyframes pulse {
    0% { transform: scale(0.9); }
    50% { transform: scale(1); }
    100% { transform: scale(0.9); }
}
/* #endregion */

/* #region Lot Filters */
.div-lot-filter {
    display: flex;
    flex-direction: column;
    justify-content: center;
    overflow: none;
}

.lot-filter-flex {
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    align-self: center;
    gap: 5px;
    margin: 5px 18px 18px 18px;
}

.div-lot-filter {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.div-sim-filter {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.sim-filter-flex {
    display: flex;
    justify-content: flex-start;
    align-self: center;
    flex-wrap: wrap;
    gap: 5px;
    margin: 5px 18px 18px 18px;
}

.filter-button{
    width: 71px;
    height: 71px;
    margin: 0px;
    border: none;
}

.filter-title {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    margin-bottom: 5px;
}

.filter-min {
    background: transparent;
    border: none;
    border-radius: 50%;
    align-self: center;
}
/* #endregion */

/* #region Lot Thumbnail */
.div-thumbnail {
    width: fit-content;
    height: fit-content;

    display: flex;
    flex-direction: row;
}

.thumb-1 {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    
    padding-left: 25px;
}

.thumb-1-1 {
    align-self: center;
    min-width: 350px;
    width: fit-content;
    padding: 0px 15px 9px 15px;
    margin: 12px;
}

.thumb-1-2 {
    align-self: center;
    margin: 0 0 15px 0;
}

.thumbnail-desc-holder p {
    margin: 0px;
}

.thumbnail-desc-holder {
    cursor: default;

    margin: 25px;
    padding: 5px 7px;

    white-space: pre-line;
    letter-spacing: 0.5px;
    white-space: pre;

    background-color: var(--inset-bg);
    color: var(--sim-font);

    border-radius: 10px;
    border-collapse: collapse;
    overflow: hidden;

    box-shadow: 3px 3px 4px 3px rgba(0, 0, 0, 0.35) inset, 
                0px -1px 1px 3px rgba(0, 0, 0, 0.35),
                0px 3px 1px 3px rgba(255, 255, 255, 0.15);
}

.thumbnail-holder {
    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.3) inset,
                3px 3px 4px 2px rgba(255, 255, 255, 0.5) inset,
                -1px -1px 2px 2px rgba(0, 0, 0, 0.3),
                1px 1px 2px 1px rgba(255, 255, 255, 0.7);

    background-color: var(--bg-thumbnail-fallback);
    background-image: linear-gradient(0, var(--bg-thumbnail-light), var(--bg-thumbnail-dark));

    border: 8px solid var(--bg-thumbnail-border);
    border-radius: 50%;
    padding: 0 180px;
    
    min-height: 220px;
}

.thumbnail-offline {
    background-color: var(--bg-thumbnail-offline-fallback);
    background-image: linear-gradient(0, var(--bg-thumbnail-offline-light), var(--bg-thumbnail-offline-dark));
}

.thumbnail-image {
    width: 100%;
    height: 100%;
    position: relative;
}

.thumbnail-image img {
    position: absolute;
    top: -75px;
    left: -2px;

    width: 400px;
}
/* #endregion */

/* #region Sim Thumbnail */
.div-sim-view {
    width: fit-content;
    height: fit-content;

    display: flex;
    flex-direction: column;
    justify-content: center;
}

.div-sim-title {
    display: flex;
    flex-direction: row;
    align-content: center;
}
/* ... */

